--- a/doc/a11y.md
+++ b/doc/a11y.md
@@ -1,7 +1,18 @@
-
 ## До
+
 ![main](img/Screenshot_from_2021-03-18 15-53-32.png)
 ![posts](img/Screenshot from 2021-03-18 15-41-59.png)
 ![new post](img/Screenshot from 2021-03-18 15-42-08.png)
 ![feedback](img/Screenshot from 2021-03-18 15-42-04.png)
 
+## после
+
+![main](img/Screenshot from 2021-03-18 16-36-59.png)
+![posts](img/Screenshot from 2021-03-18 16-41-20.png)
+![new](img/Screenshot from 2021-03-18 16-42-57.png)
+![feedback](img/Screenshot from 2021-03-18 16-44-17.png)
+
+## validator.w3.org
+
+[main](https://validator.w3.org/nu/?doc=https%3A%2F%2Fvasiliev-alexey.github.io%2Fotus_js_blog%2Fmain.html)
+[posts](https://validator.w3.org/nu/?doc=https%3A%2F%2Fvasiliev-alexey.github.io%2Fotus_js_blog%2Fpost_list.html)
